--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <html>
 
-<h1 style="color:blue"> Under Construction</h1>
+<head> 
 
+<link rel="stylesheet" href="../static/CSS.css" />
+
+</head>
+
+<body>
+
+
+
+<h1 style="color:blue"> Under Construction</h1>
 <p style="color:purple">Come back in December 2018!</p>
 
+<p><img src="Dada.jpg" alt="Oops!"height="300" width="300"></p>
+
+<a href="https://tinyurl.com/ycdwnj8w">This is a Link</a>
+
+</body>
 </html>
