--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1 style="color:blue"> </h1>
 <p style="color:purple"></p>
 
-<p><img src="silvermoon.jpg" alt="Oops!"height="300" width="300"></p>
+<p><img src="silvermoon.png" alt="Oops!"height="300" width="300"></p>
 
 <a href="https://tinyurl.com/ycdwnj8w">This is a Link</a>
 
