--- a/index.html
+++ b/index.html
@@ -2,19 +2,27 @@
 
 <head> 
 
-<link rel="stylesheet" href="../static/CSS.css" />
-
+	<link rel="stylesheet" href="style.css">
+	
 </head>
+	<body style="background-color: rgb(91, 12, 232);">
+		<h1 style="color: white"> CHLOE GARDNER </h1>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+		<script src="sketch.js"></script>
+		
+		<div id="sketch-holder"></div>
+	
+		<h1 style="color:blue"> </h1>
+		<p style="color:purple"></p>
+		<table style="width:100%">
+		  <tr>
+			<th><p><img src="./imgs/snowglobe.gif" alt="Oops!"height="300" width="300"></p></th>
+			<th><p><img src="./imgs/mulan.png" alt="Oops!"height="300" width="300"></p></th> 
+			<th><p><img src="./imgs/dada.jpg" alt="Oops!"height="300" width="300"></p></th>
+		  </tr>
+		</table>
 
-<body>
-
-
-<h1 style="color:blue"> </h1>
-<p style="color:purple"></p>
-
-<p><img src="silvermoon.png" alt="Oops!"height="300" width="300"></p>
-
-<a href="https://tinyurl.com/ycdwnj8w">This is a Link</a>
-
-</body>
+		<p><a href="https://tinyurl.com/ycdwnj8w">This is a Link</a></p>
+		
+	</body>
 </html>
