--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1 style="color: white"> CHLOE GARDNER </h1>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
 		<script src="sketch.js"></script>
-		<h2 style="color: white"> CHLOE GARDNER </h2>
+		<h2 style="color: white"> Click Me! </h2>
 		
 		<div id="sketch-holder"></div>
 	
